syntax = "proto3";

message Empty {}

message NewsId {
    string id = 1;
}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

message NewsList {
    repeated News news = 1;
}

service NewsService {
    rpc GetAllNews(Empty) returns (NewsList) {};
    rpc CreateNews(News) returns (News) {};
    rpc GetNews(NewsId) returns (News) {};
    rpc UpdateNews(News) returns (News) {};
    rpc DeleteNews(NewsId) returns (News) {};
}